--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   對於後端亦有研究，主要使用過 Golang、Java。<br>
   <br>
   平常興趣玩電腦、看動畫、寫寫自己的網站、玩貓！(’・ω・‘)<br>
-  <img id="img">
+  <img id="img" onload="imgOnload()">
   <script src="./index.js" type="text/javascript"></script>
 </body>
 
