--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   前端工程師，對於 Angular、React、Vue 皆有研究，<br>
-  對於後端亦有研究，主要使用過 Golang、Java。<br>
+  也寫過後端，主要使用過 Golang、Java。<br>
   <br>
   平常興趣玩電腦、看動畫、寫寫自己的網站、玩貓！(’・ω・‘)<br>
   <img id="img" onload="imgOnload()">
