--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta name="theme-color" content="#323232">
 
   <meta property="og:site_name" content="Entrance：Calico & MooMoo">
-  <meta property="og:url" content="https://www.calicomoomoo.ml/entrance">
-  <meta property="og:image" content="https://www.calicomoomoo.ml:8080/entrance/favicon.png">
+  <meta property="og:url" content="https://www.calicomoomoo.com/entrance">
+  <meta property="og:image" content="https://www.calicomoomoo.com:8080/entrance/favicon.png">
   <meta property="og:title" content="Entrance：Calico & MooMoo">
   <meta property="og:description" content="Calico & MooMoo 入口網站">
   <meta property="og:type" content="website">
