--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   前端工程師，對於 Angular、React、Vue 皆有研究，<br>
   也寫過後端，主要使用過 Golang、Java。<br>
   <br>
-  平常興趣玩電腦、看動畫、寫寫自己的網站、玩貓！(’・ω・‘)<br>
+  平常興趣玩電腦、看動畫、寫寫自己的網站、玩貓、玩小孩！(’・ω・‘)<br>
   <img id="img" onload="imgOnload()">
   <script src="./index.js" type="text/javascript"></script>
 </body>
